Sun Mar 18 19:40:01 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/megatec_usb.c: code conversion and adjustments. Added USB-related
   variables, regex matching support and an initial attempt for subdriver
   matching. Added megatec_usb banner.
 - drivers/Makefile.am: added some needed files to megatec_usb sources.

Sat Mar 17 20:40:51 UTC 2007 / Charles Lepple <clepple@gmail.com>
 - drivers/tripplite_usb.c: trying to clean up the soft_shutdown function.

Sat Mar 17 20:04:55 UTC 2007 / Charles Lepple <clepple@gmail.com>
 - drivers/tripplite_usb.c: merged in some outlet control code from
   branches/tripplite_usb_outlets (723:728)

Fri Mar 16 21:02:10 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>
 - drivers/megatec.c: added hook functions for subdrivers to show their own
   banner and add options to the vartable.

Fri Mar 16 04:05:31 UTC 2007 / Charles Lepple <clepple@gmail.com>
 - drivers/tripplite_usb.c: some adjustments for FreeBSD. This driver appears
   to work best on FreeBSD when passed "-i 0".

Thu Mar 15 20:16:01 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - m4/nut_check_ipv6.m4: no more need to check for IN6_IS_ADDR_V4MAPPED
   (will be defined if it doesn't exist)

Wed Mar 14 20:04:20 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/access.c: change u_int32_t to uint32_t

Wed Mar 14 16:33:36 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/access.h: fix broken IN6_IS_ADDR_V4MAPPED macro for glibc 2.1
   and earlier

Tue Mar 13 03:46:38 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - clients/upsc.c, man/upsc.8: added "list UPS names" functionality to upsc,
   and updated the man page.

Mon Mar 12 20:29:47 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsclient.c: fix endless loop (missing break statement
   causing connect() to retry always instead of skipping to the next
   addrinfo element)

Sun Mar 11 04:10:17 UTC 2007 / Charles Lepple <clepple@gmail.com>
