@@ -51,7 +51,7 @@ SERIAL_PAGES = \
 
 SNMP_PAGES = snmp-ups.8
 
-USB_LIBUSB_PAGES = usbhid-ups.8 bcmxcp_usb.8 tripplite_usb.8 
+USB_LIBUSB_PAGES = usbhid-ups.8 bcmxcp_usb.8 tripplite_usb.8 megatec_usb.8
 USB_HIDDEV_PAGES = energizerups.8
 
 # decide which pages to install
